Exp-1/output/f00441_load_test.err
  File "output/f00441_load_test.py", line 3
    import assert
           ^
SyntaxError: invalid syntax
